Merged changes from 1.1.x
svn path=/branches/FastInfoset-1_2-branch/; revision=697


Former-commit-id: 702ecc9815cb7e4cd4edfd215ed03ca396ab211e