@@ -55,7 +55,7 @@ public class LongEncodingAlgorithm extends IntegerEncodingAlgorithm {
     public int getPrimtiveLengthFromOctetLength(int octetLength) throws EncodingAlgorithmException {
         if (octetLength % LONG_SIZE != 0) {
             throw new EncodingAlgorithmException(CommonResourceBundle.getInstance().
-                    getString("message.lengthNotMultipleOfLong", new Object[]{new Integer(LONG_SIZE)}));
+                    getString("message.lengthNotMultipleOfLong", new Object[]{Integer.valueOf(LONG_SIZE)}));
         }
         
         return octetLength / LONG_SIZE;
@@ -150,16 +150,16 @@ public class LongEncodingAlgorithm extends IntegerEncodingAlgorithm {
                 }
             }
             
-            final int l = 
-                    ((b[0] & 0xFF) << 56) | 
-                    ((b[1] & 0xFF) << 48) | 
-                    ((b[2] & 0xFF) << 40) | 
-                    ((b[3] & 0xFF) << 32) | 
+            final long l = 
+                    ((long)(b[0] & 0xFF) << 56) | 
+                    ((long)(b[1] & 0xFF) << 48) | 
+                    ((long)(b[2] & 0xFF) << 40) | 
+                    ((long)(b[3] & 0xFF) << 32) | 
                     ((b[4] & 0xFF) << 24) | 
                     ((b[5] & 0xFF) << 16) | 
                     ((b[6] & 0xFF) << 8) | 
                     (b[7] & 0xFF);
-            longList.add(new Long(l));
+            longList.add(Long.valueOf(l));
         }
         
         return generateArrayFromList(longList);
